# incident-agent

./: .env.example  .gitignore  README.md  incident-agent-qt.spec  make_icon.py  pyproject.toml  requirements.txt
scripts/: download_loghub.py  generate_complex_logs.py
src/incident_agent/: app.py  config.py  graph.py  state.py
src/incident_agent/nodes/: dedup.py  detect.py  ingest_file.py  notify_stdout.py  rca_llm.py
src/incident_agent/ui_qt/: app_qt.py
